# iact-estimator

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rstcheck.cfg  CODEOWNERS  README.md  authors.html  changelog.html  contribute.html  environment.yml  example.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  towncrier.toml  userguide.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: changelog.yml  ci.yml  coverage.yml
_modules/: index.html
_modules/iact_estimator/: core.html  io.html  observability.html  plots.html  spectral.html  statistics.html
_modules/iact_estimator/plots/: multi_wavelength.html  observability.html  physics.html  wobble_skymap.html
_modules/iact_estimator/tests/: test_cli.html  test_io.html  test_observability.html  test_spectral.html  test_statistics.html
_sources/: authors.rst.txt  changelog.rst.txt  contribute.rst.txt  index.rst.txt  installation.rst.txt  userguide.rst.txt
_sources/api/: index.rst.txt
_sources/api/iact_estimator/: index.rst.txt
_sources/api/iact_estimator/core/: index.rst.txt
_sources/api/iact_estimator/io/: index.rst.txt
_sources/api/iact_estimator/observability/: index.rst.txt
_sources/api/iact_estimator/plots/: index.rst.txt
_sources/api/iact_estimator/plots/multi_wavelength/: index.rst.txt
_sources/api/iact_estimator/plots/observability/: index.rst.txt
_sources/api/iact_estimator/plots/physics/: index.rst.txt
_sources/api/iact_estimator/plots/wobble_skymap/: index.rst.txt
_sources/api/iact_estimator/spectral/: index.rst.txt
_sources/api/iact_estimator/statistics/: index.rst.txt
_sources/api/iact_estimator/tests/: index.rst.txt
_sources/api/iact_estimator/tests/conftest/: index.rst.txt
_sources/api/iact_estimator/tests/test_cli/: index.rst.txt
_sources/api/iact_estimator/tests/test_core/: index.rst.txt
_sources/api/iact_estimator/tests/test_io/: index.rst.txt
_sources/api/iact_estimator/tests/test_observability/: index.rst.txt
_sources/api/iact_estimator/tests/test_spectral/: index.rst.txt
_sources/api/iact_estimator/tests/test_statistics/: index.rst.txt
_static/: documentation_options.js
api/: index.html
api/iact_estimator/: index.html
api/iact_estimator/core/: index.html
api/iact_estimator/io/: index.html
api/iact_estimator/observability/: index.html
api/iact_estimator/plots/: index.html
api/iact_estimator/plots/multi_wavelength/: index.html
api/iact_estimator/plots/observability/: index.html
api/iact_estimator/plots/physics/: index.html
api/iact_estimator/plots/wobble_skymap/: index.html
api/iact_estimator/spectral/: index.html
api/iact_estimator/statistics/: index.html
api/iact_estimator/tests/: index.html
api/iact_estimator/tests/conftest/: index.html
api/iact_estimator/tests/test_cli/: index.html
api/iact_estimator/tests/test_core/: index.html
api/iact_estimator/tests/test_io/: index.html
api/iact_estimator/tests/test_observability/: index.html
api/iact_estimator/tests/test_spectral/: index.html
api/iact_estimator/tests/test_statistics/: index.html
docs/: Makefile
docs/source/: changelog.rst  conf.py  contribute.rst  example.ipynb  index.rst  userguide.rst
docs/source/api/: index.rst
docs/source/changes/: 18.changed.rst  22.added.rst  25.added.rst  28.added.rst  29.added.rst  33.added.rst  35.added.rst  36.added.rst  4.added.rst  41.added.rst  45.fixed.rst  46.fixed.rst  5.added.rst
src/iact_estimator/: __init__.py  core.py  gammapy_interface.py  io.py  observability.py  plots.py  spectral.py  statistics.py  version.py
src/iact_estimator/_dev_version/: __init__.py
src/iact_estimator/plots/: multi_wavelength.py  observability.py  physics.py  wobble_skymap.py
src/iact_estimator/resources/: MAGIC_LST1_high_zenith_performance.ecsv  MAGIC_LST1_low_zenith_performance.ecsv  MAGIC_LST1_mid_zenith_performance.ecsv  config.yml  ebl_dominguez_11.txt  high_zenith_performance.ecsv  horizon_profile_M1.ecsv  horizon_profile_M2.ecsv  low_zenith_performance.ecsv  mid_zenith_performance.ecsv  models.yml
src/iact_estimator/scripts/: __init__.py  estimator.py  get_config.py  main.py
src/iact_estimator/tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_io.py  test_observability.py  test_spectral.py  test_statistics.py  test_version.py
