[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "iact_estimator"
authors = [
    { name = "Michele Peresano", email = "peresano.michele@gmail.com" },
    { name = "Julian Sitarek", email = "jsitarek@uni.lodz.pl" },
]
description = "Estimate the performance of an IACT telescope system to an observation."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["iact", "cherenkov", "astronomy"]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astroplan @ git+https://github.com/astropy/astroplan.git", # see https://github.com/astropy/astroplan/pull/622
    "astropy",
    "matplotlib",
    "astroquery",
    "gammapy",
    "seaborn",
    "starplot",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "furo",
    "ipywidgets",
    "myst-nb",
    "numpydoc",
    "rstcheck[sphinx]",
    "sphinx-argparse",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinxcontrib-towncrier",
    "towncrier<24.7",
]
dev = ["pre-commit", "ruff", "iact_estimator[docs]", "iact_estimator[tests]"]
tests = ["pytest", "pytest-console-scripts", "pytest-cov"]

[project.scripts]
iact-estimator = "iact_estimator.scripts.main:main"

[tool.setuptools_scm]
write_to = "src/iact_estimator/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yml", "*.txt", "*.ecsv"]

[tool.numpydoc_validation]
# https://numpydoc.readthedocs.io/en/latest/validation.html#built-in-validation-checks
checks = [
    "all",  # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
    "RT02",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["src/iact_estimator/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/iact_estimator"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/version.py",
    "*/_version.py",
    "*/_dev_version/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
